--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
+   background: url("../img/maxresdefaul.jpg") top center;
+  background-size: cover;
 }
 
 a {
@@ -18,6 +20,9 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
+/*--------------------------------------------------------------
+# Back to top button
+--------------------------------------------------------------*/
 .back-to-top {
   position: fixed;
   visibility: hidden;
@@ -48,6 +53,9 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
 }
 
+/*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
 #header {
   position: fixed;
   top: 0;
@@ -118,8 +126,10 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
-
+/*--------------------------------------------------------------
+# Navigation Menu
+--------------------------------------------------------------*/
+/* Desktop Navigation */
 .nav-menu {
   padding: 30px 0 0 0;
 }
@@ -160,6 +170,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #149ddd;
 }
 
+/* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
   right: 15px;
@@ -189,10 +200,13 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
 }
 
+/*--------------------------------------------------------------
+# Hero Section
+--------------------------------------------------------------*/
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/,ll.jpg") top center;
+  background: url("../img/MIhU.gif") top center;
   background-size: cover;
 }
 
