--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
-   background: url("../img/v.jpeg") top center;
+   background: url("../img/maxresdefaul.jpg
+") top center;
   background-size: cover;
 }
 
